# Parttern_recognition_TEI

./: CMakeLists.txt  FOURN.c  changement.c  cherchermax.c  complex.c  complex.h  correlation.c  correlation.h  fonction_fourier  fonctions.c  fonctions_can.c  imComplex2Reel  pngwrap.h  projet_can.h  test.c  testImage.c
